# river

./: .gitignore  Cargo.toml  LICENSE  README.md
resource/static/: index.html
src/: eventbus.rs  extension.rs  http_flv.rs  http_player.rs  lib.rs  main.rs  packet.rs  rtmp_server.rs  util.rs  ws_fmp4.rs  ws_h264.rs
src/protocol/: aac.rs  flv.rs  fmp4.rs  h264.rs  mod.rs  rtmp.rs
static/: player.html
