[package]
name = "river"
version = "0.1.0"
authors = ["ninthakeey <ninthakeey@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
futures = "0.3.4"

log = "0.4.0"
env_logger = "0.6.0"
chrono = "0.4.9"
async-trait = "0.1.24"
byteorder = "1.3.4"
rand = "0.7.3"
amf = "0.2.1"
regex = "1.3.4"
num = "0.2.1"
num-derive = "0.3.0"
num-traits = "0.2.11"
