[package]
name = "river"
version = "0.1.0"
authors = ["ninthakeey <ninthakeey@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.4"
log = "0.4"
env_logger = "0.8"
chrono = "0.4"
byteorder = "1.3.4"
rand = "0.7.3"
amf = "0.2.1"
regex = "1.3.4"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
anyhow = "1.0.33"
dashmap = "4.0.0-rc6"
crossbeam-utils = "0.8"
once_cell = "1.4.1"