[package]
name = "river"
version = "0.1.1"
authors = ["ninthakeey <ninthakeey@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.4"
log = "0.4"
env_logger = "0.8"
chrono = "0.4"
byteorder = "1.4"
rand = "0.8"
amf = "0.3"
regex = "1.5"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
anyhow = "1"
dashmap = "4"
crossbeam-utils = "0.8"
once_cell = "1.7"
async-tungstenite = "0.13"
futures = "0.3"
clap="3.0.0-beta.2"